--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,6 +11,16 @@
     "NUXT_CF_ACCOUNT_ID": "932c7193b250430943b0d514beaac7cb",
     "NUXT_CF_API_TOKEN": "mpXM-0FslwpmG4VKQ9Kp4YmSu9XHo0T09ZeHBtgN",
   },
+"observability": {
+    "enabled": false,
+    "head_sampling_rate": 1,
+    "logs": {
+      "enabled": true,
+      "head_sampling_rate": 1,
+      "persist": true,
+      "invocation_logs": true
+    }
+  },
   "compatibility_date": "2025-05-08",
   "compatibility_flags": [
     "nodejs_compat"
